--- a/style.css
+++ b/style.css
@@ -1,113 +1,97 @@
 
-/*** styles *****/
-*{
+.container-fluid{
+  margin: 0;
+  padding: 0;
+}
+
+.navbar{
+  border-radius: 0px;
+  background-color: rgba(0,0,0,0.8);
+}
+
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand:hover{
+  color: white;
+}
+
+.nav{
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-toggle{
+  border: 2px solid white;
+  margin-right: 25px;
+}
+
+.icon-bar{
+  background-color: white;
+}
+
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
+}
+
+li{
   box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  
+  width: 100%;
 }
-body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #fff;
-  font-family: 'Oxygen', sans-serif;
+
+.menu-item{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid black;
+  color: black;
+  display: block;
 }
-h1{
-  margin-top: 20px;
-  margin-bottom: 30px;
+
+.menu-item:hover{
+  background-color: rgba(0,0,0,0.9);
+  color: rgba(0,0,0,0.4);
+}
+
+
+
+.row{
+  margin: 20px;
+}
+
+.content-box{
+  margin: 20px;
+  width: auto;
+  height: auto;
+  color: black;
+  background-color: rgba(0,0,0,0.2);
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  padding: 20px;
+}
+
+.item-name{
   text-align: center;
-  font-size: 1.75em;
-}
-
-p {
-  background-color: #bfbfbf;
-  margin-right: 30px;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  padding: 40px 10px 5px 10px;
-  size: 1.25rem;
-  overflow: hidden;
-}
-
-#header-nav {
-  background-color: #999999;
-  border-radius: 0;
-  border: 0;
-}
-.navbar-brand {
-  padding-top: 15px;
-}
-
-.navbar-brand h1 { 
-  color: #000;
-  font-size: 1.5em;
-  text-transform: uppercase;
+  font-size: 20px;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 25px;
-  line-height: .75;
-
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
 }
 
-#nav-list {
-  margin-top: 10px;
-  background-color: #fff;
-  border: 0px;
+#top{
 
 }
-#nav-list a {
-  color: #000;
-  text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
-}
-
-hr{
-  margin-top: 0px;
-  margin-bottom: 0px;
-  border: .5px solid #000;
-}
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-
-#div {
-  position: relative; 
-}
-
-#chickenid {
-  position: absolute;
-  top: 10;
-  left: 45%;
-  font-size: 1.3em;
-  font-weight: bold;
-  height: 35px;
-  width: 130px;
-  padding: 10px;  
-  text-align: center;   
-}
-.menu {
-  padding-bottom: 30px;
-  margin-bottom: 30px;
-  color: #000;
-  background-color: #fff;
-  justify-content: center;
-  align-content: center;
-}
-#div {
-   
-}
-.centered-col{
-   float: none;
-    margin: 0 auto;
-}
-p {
- padding: 50px 20px;
-}
-
